[gd_scene load_steps=33 format=3 uid="uid://ckbf5eqgs5mc5"]

[ext_resource type="Script" path="res://scenes/enemies/bat/bat_new.gd" id="1_hbnp0"]
[ext_resource type="Texture2D" uid="uid://boro0l52ogqc2" path="res://scenes/enemies/bat/Bat_Sprite_Sheet.png" id="2_b1qpj"]
[ext_resource type="Texture2D" uid="uid://crhh8o3m1d74x" path="res://assets/shadow/MediumShadow.png" id="4_160yl"]
[ext_resource type="Script" path="res://scenes/components/hurt_component.gd" id="4_ydfs3"]
[ext_resource type="Script" path="res://scenes/components/health_component.gd" id="5_65u4c"]
[ext_resource type="Script" path="res://scenes/components/hitbox_component.gd" id="6_nlfm7"]
[ext_resource type="Script" path="res://scenes/state_machine/state_machine.gd" id="8_6tj8j"]
[ext_resource type="Script" path="res://scenes/enemies/bat/BatIdleState.gd" id="9_d8706"]
[ext_resource type="Script" path="res://scenes/enemies/bat/BatHurtState.gd" id="9_ijdca"]
[ext_resource type="Script" path="res://scenes/enemies/bat/BatDiedState.gd" id="10_ffd4f"]
[ext_resource type="Script" path="res://scenes/enemies/bat/BatChaseState.gd" id="10_whr3e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b0eoq"]
atlas = ExtResource("2_b1qpj")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr07i"]
atlas = ExtResource("2_b1qpj")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku08o"]
atlas = ExtResource("2_b1qpj")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1mlb"]
atlas = ExtResource("2_b1qpj")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_57sot"]
atlas = ExtResource("2_b1qpj")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l1e4"]
atlas = ExtResource("2_b1qpj")
region = Rect2(0, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_plrhe"]
atlas = ExtResource("2_b1qpj")
region = Rect2(16, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r566c"]
atlas = ExtResource("2_b1qpj")
region = Rect2(32, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_trqxo"]
atlas = ExtResource("2_b1qpj")
region = Rect2(48, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y416"]
atlas = ExtResource("2_b1qpj")
region = Rect2(64, 48, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_icdt3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0eoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr07i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku08o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1mlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57sot")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l1e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plrhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r566c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trqxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y416")
}],
"loop": false,
"name": &"died",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_m6asw"]

[sub_resource type="Animation" id="Animation_k6ax5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual/AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visual/AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visual/MediumShadow:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.301961)]
}

[sub_resource type="Animation" id="Animation_uhg7w"]
resource_name = "die"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"died"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual/MediumShadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.301961), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_srk7f"]
resource_name = "fly"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/AnimatedSprite2D:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual/MediumShadow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_10neg"]
resource_name = "hurt"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/AnimatedSprite2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.368627, 0.419608, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/AnimatedSprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.09, 0.1),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(6, 6), Vector2(4.2, 4.2), Vector2(5, 5)]
}

[sub_resource type="Animation" id="Animation_ytthl"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"died"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual/MediumShadow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dpm84"]
_data = {
"RESET": SubResource("Animation_k6ax5"),
"die": SubResource("Animation_uhg7w"),
"fly": SubResource("Animation_srk7f"),
"hurt": SubResource("Animation_10neg"),
"idle": SubResource("Animation_ytthl")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_qui56"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ce74e"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hblm1"]
radius = 403.0

[node name="Bat" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 4
collision_mask = 5
script = ExtResource("1_hbnp0")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("5_65u4c")
health = 30

[node name="Visual" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true

[node name="MediumShadow" type="Sprite2D" parent="Visual"]
visible = false
modulate = Color(1, 1, 1, 0.301961)
position = Vector2(0, -5)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_160yl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visual"]
unique_name_in_owner = true
position = Vector2(0, -28)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_icdt3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -42)
shape = SubResource("CircleShape2D_m6asw")

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_dpm84")
}
speed_scale = 0.8

[node name="HurtComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "invincibility_timer")]
collision_layer = 0
script = ExtResource("4_ydfs3")
health_component = NodePath("../HealthComponent")
invincibility_timer = NodePath("InvincibilityTimer")
is_enemy = true

[node name="InvincibilityTimer" type="Timer" parent="HurtComponent"]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, -47)
shape = SubResource("CircleShape2D_qui56")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource("6_nlfm7")
damage = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -47)
shape = SubResource("CircleShape2D_ce74e")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_6tj8j")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("chase_area", "animation_player")]
script = ExtResource("9_d8706")
chase_area = NodePath("../../ChaseArea2D")
animation_player = NodePath("../../AnimationPlayer")

[node name="ChaseState" type="Node" parent="StateMachine" node_paths=PackedStringArray("bat", "animation_player", "health_component")]
script = ExtResource("10_whr3e")
bat = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
health_component = NodePath("../../HealthComponent")

[node name="HurtState" type="Node" parent="StateMachine" node_paths=PackedStringArray("bat", "health_component", "hurt_component", "animation_player", "hit_collision")]
script = ExtResource("9_ijdca")
bat = NodePath("../..")
health_component = NodePath("../../HealthComponent")
hurt_component = NodePath("../../HurtComponent")
animation_player = NodePath("../../AnimationPlayer")
hit_collision = NodePath("../../HitboxComponent/CollisionShape2D")

[node name="DiedState" type="Node" parent="StateMachine" node_paths=PackedStringArray("animation_player", "bat_collision", "bat", "hit_collision")]
script = ExtResource("10_ffd4f")
animation_player = NodePath("../../AnimationPlayer")
bat_collision = NodePath("../../CollisionShape2D")
bat = NodePath("../..")
hit_collision = NodePath("../../HitboxComponent/CollisionShape2D")

[node name="ChaseArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea2D"]
position = Vector2(0, -47)
shape = SubResource("CircleShape2D_hblm1")
debug_color = Color(1, 0.576471, 0.584314, 0.223529)

[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
