[gd_scene load_steps=30 format=3 uid="uid://bssbkxhrb8ghs"]

[ext_resource type="Texture2D" uid="uid://bperphtwjshos" path="res://scenes/enemies/tnt_goblin/Dynamite.png" id="1_4bved"]
[ext_resource type="Script" path="res://scenes/enemies/tnt_goblin/tnt.gd" id="1_yqgwm"]
[ext_resource type="Texture2D" uid="uid://bc5vdwiojsmqw" path="res://scenes/Effects/explosion/Explosions.png" id="2_x37ec"]
[ext_resource type="Script" path="res://scenes/components/hitbox_component.gd" id="3_qu35t"]
[ext_resource type="Script" path="res://scenes/components/health_component.gd" id="5_js2vq"]
[ext_resource type="Script" path="res://scenes/components/hurt_component.gd" id="6_fwmqg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_snfdo"]
radius = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qsmch"]
atlas = ExtResource("1_4bved")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ahvb"]
atlas = ExtResource("1_4bved")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rltg3"]
atlas = ExtResource("1_4bved")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_63eou"]
atlas = ExtResource("1_4bved")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_888ut"]
atlas = ExtResource("1_4bved")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjuu1"]
atlas = ExtResource("1_4bved")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrbgt"]
atlas = ExtResource("2_x37ec")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_axydr"]
atlas = ExtResource("2_x37ec")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0tge"]
atlas = ExtResource("2_x37ec")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4310u"]
atlas = ExtResource("2_x37ec")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rqgd"]
atlas = ExtResource("2_x37ec")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqptq"]
atlas = ExtResource("2_x37ec")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2khsy"]
atlas = ExtResource("2_x37ec")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwbxt"]
atlas = ExtResource("2_x37ec")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_okrgt"]
atlas = ExtResource("2_x37ec")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_48tfm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsmch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ahvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rltg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63eou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_888ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjuu1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrbgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axydr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0tge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4310u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rqgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqptq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2khsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwbxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okrgt")
}],
"loop": true,
"name": &"explode",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_xj02o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="Animation" id="Animation_3qo6f"]
resource_name = "explode"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"explode"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionShape2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"disabled", false],
"method": &"set_deferred"
}, {
"args": [&"disabled", true],
"method": &"set_deferred"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gh775"]
resource_name = "rotate"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_erwwa"]
_data = {
"RESET": SubResource("Animation_xj02o"),
"explode": SubResource("Animation_3qo6f"),
"rotate": SubResource("Animation_gh775")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xbk47"]
radius = 37.054

[sub_resource type="CircleShape2D" id="CircleShape2D_t5umm"]
radius = 18.0

[node name="Tnt" type="Area2D"]
z_index = 1
collision_layer = 0
collision_mask = 129
script = ExtResource("1_yqgwm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_snfdo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_48tfm")
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_erwwa")
}
autoplay = "rotate"

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource("3_qu35t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_xbk47")
disabled = true

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("5_js2vq")

[node name="HurtComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "invincibility_timer")]
collision_layer = 0
collision_mask = 0
script = ExtResource("6_fwmqg")
health_component = NodePath("../HealthComponent")
invincibility_timer = NodePath("Timer")
is_enemy = true

[node name="Timer" type="Timer" parent="HurtComponent"]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_t5umm")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
